# DeepCAD

./: -files -m  .bandit  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  2号基于3号反馈的优化方案.json  2号给3号的测试数据.json  3D_VIEWPORT_ENHANCEMENT_REPORT.md  3D_VIEWPORT_TOOLBAR_LAYOUT_DESIGN.md  3D_VIEWPORT_TOOLS_AND_CONTROLS_FOR_ARCHITECT_0.md  3号专家编译错误修复完成报告.md  3号第1周开发成果汇报.md  3号等待期间技术准备总结.md  3号计算专家分析报告.json  ABAQUS_STYLE_COORDINATE_SYSTEM.md  AI_AGENT_IMPLEMENTATION_REPORT.md  AI_ASSISTANT_INTEGRATION_GUIDE.md  AI_IDENTITY_IMPLEMENTATION.md  ARCHITECTURE_DIRECTIVE_TO_EXPERT1.md  ARCHITECTURE_MIGRATION_SUMMARY.md  ARCHITECT_OPTIMIZATION_COMPLETE.md  ARCHITECT_TODO_LIST.md  App.tsx  BOUNDARY_8_010000_nodes.txt  BOUNDARY_8_100000_nodes.txt  BOUNDARY_8_111000_nodes.txt  CHANGELOG.md  CLEANUP_COMPLETED.md  CODE_CLEANUP_COMPLETED.md  CODE_COMMENT_STANDARDS.md  COLLABORATIVE_DATA_FORMAT_V2.md  COMPATIBILITY-ISSUES.md  COMPILATION_ERRORS_ASSIGNMENT.md  COMPONENT_MIGRATION_PLAN.md  COMPREHENSIVE_SYSTEM_UPDATE_INTEGRATION_COMPLETE.md  COMPUTATION_RESULTS_DISPLAY_TECHNICAL_SPEC.md  CONTRIBUTING.md  CONTROL_CENTER_UNIFICATION_TECH_PLAN.md  (+437 more)
ai_assistant/: DEEPCAD_AI_ROADMAP.md  deepcad_ai_assistant.py  simple_ui.py  streamlit_ui.py  test_assistant.py
anchored_two_stage_analysis/: AnchoredMaterials.json  ProjectParameters.json
backend/: app.py  database.py  requirements.txt
complete_fpn_analysis_stage_1/: CompleteStructuralMaterials.json  ProjectParameters.json
complete_fpn_analysis_stage_2/: ProjectParameters.json
complete_fpn_kratos_conversion/: ProjectParameters.json  ProjectParameters_3dof.json  ProjectParameters_fixed.json  ProjectParameters_no_bc.json  ProjectParameters_no_rotation.json  materials.json  test_params.json  test_simple.mdpa
complete_fpn_real_bc_analysis/: CompleteSoilMaterials.json  ProjectParameters.json
complete_soil_analysis/: ProjectParameters.json
config/: nginx.conf
core/: __init__.py  advanced_geomechanics.py  cae_workflow.py  construction_simulation.py  fluid_solid_coupling.py  geomechanics_solver.py  kratos_integration.py  kratos_solver.py  kratos_utils.py  mesh_moving_integration.py  mesh_optimization.py  test_kratos_integration.py
data/: README_数据转换说明.md  README_钻孔数据集.md  borehole_data_excavation_area.csv  borehole_data_full_domain.csv  borehole_geology_data.json  boreholes_basic_info.csv  boreholes_for_import.json  boreholes_strata_details.csv  boreholes_with_undulation.csv  boreholes_with_undulation_fixed.csv  computation_domain.txt  computation_domain_info.txt  convert_excel_to_csv.py  generate_borehole_data.py  generate_large_boreholes.py  generate_test_data.py  synthetic_borehole_data_generated.csv  test_frontend_integration.html  基坑轮廓-带车库.dxf
deep_excavation/: __init__.py  docker-compose.yml  (+7 more)
(+2713 files in other folders)
