[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepcad"
version = "1.1.0"
description = "Deep Excavation CAE System - 深基坑3D CAE平台"
authors = ["DeepCAD Team"]
readme = "README.md"
packages = [{include = "core"}, {include = "gateway"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core Framework
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.1"
requests = "^2.31.0"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"

# Scientific Computing & Data
numpy = "^1.26.3"
scipy = "^1.12.0"
pandas = "^2.2.0"
h5py = "^3.10.0"
matplotlib = "^3.8.2"

# Geometry, Meshing & Visualization
gmsh = "^4.11.1"
pyvista = "^0.43.0"
ezdxf = "^1.1.1"
meshio = "^5.3.4"

# Utilities
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
typer = "^0.9.0"
jinja2 = "^3.1.3"
xlsxwriter = "^3.1.2"
openpyxl = "^3.1.2"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.2.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[tool.poetry.scripts]
deepcad = "gateway.main:cli"

[tool.black]
line-length = 100
skip-string-normalization = true
exclude = "(\.venv|build|dist|node_modules|frontend)/"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
exclude = [".venv", "build", "dist", "node_modules", "frontend"]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=core",
    "--cov=gateway",
    "--cov-report=html",
    "--cov-report=term-missing"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "gmsh.*",
    "pyvista.*",
    "ezdxf.*",
    "meshio.*"
]
ignore_missing_imports = true 